css/styles.css
@charset "UTF-8";
/* CSS Document */

/*  
Version: 1.0
@Author: Mitchell Thompson
@Author URI: http://www.mitchlthompson.com
*/

body, body * {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
    line-height: 1.5;
}
a img {
	border: 0;
}

main {
    background-color:beige;
    width:95%;
    margin:0 auto;
    overflow: auto;
}

header {
    background: red;
    width:100%;
    overflow:hidden;
}
#logo {
    background: blue;
    width: 35%;
    float: left;
}
#myPic {
    margin: 5% 0 5% 5%;
    width:20%;
    float:left;
}
#myPic img {
    width:100%;
    border-radius: 100px;
}
#name {
    float:right;
    width: 70%;
    margin: 5% 3% 5% 0;
}
#name h1 {
    font-size: 1.5em;
}
nav {
    background: green;
    height: 50px;
    width:35%;
    float: right;
}
#boxes {
    background-color:aqua;
    width:90%;
    height:1500px;
    margin:0 auto;
}
.box {
    width: 100%;
    padding-bottom:5%;
}
/************** start #intro *******************/
#intro-outter{
    background-color:blueviolet; 
    padding-top:5%;
}
#intro-inner {
    background-color: chartreuse;
    margin: 0 auto;
    max-width: 700px;
    width:60%;
    padding:2%;
}
/************** start #hire-me *******************/
#hire-me {
    background-color:azure; 
    margin: 0 auto;
    max-width: 700px;
    width:60%;
    overflow:hidden;
}
#hire-me a {
    text-decoration: none;
}
.hire-me {
    width:30%;
    margin-top:5%;
    margin-bottom:5%;
    padding-top:.5%;
    padding-bottom:.5%;
    font-size: 1.3em;
    text-align: center;
    border:solid;
}
.hire-me-left {
    float:left;
    margin-left:15%;
}
.hire-me-right {
    float:right;
    margin-right:15%;
}
/************** end #hire-me *******************/
/************** end #intro *******************/

/************** start #skills *******************/
#skills-outter {
    background-color:cadetblue;
    padding-top:5%;
}
#skills-inner {
    background-color: chartreuse;
    margin:0 auto;
    max-width: 700px;
    width:60%;
    padding:2%;
}
/************** end #skills *******************/

/************** start #projects *******************/

#projects {
    background-color:coral; 
    overflow:hidden;
}
#project-box {
    margin:0 auto;
    background-color: red;
    overflow:hidden;
    max-width: 800px;
    width:90%;
}
.project-left {
    float:left;
    width:43%;
    padding:3%;
}
.project-right {
    width:45%;
    padding:3%;
}
#project-box img {
    width:100%;
}
/************** end #projects *******************/

#contact {
    background-color:darkseagreen; 
    overflow: auto;
}
#social {
    float:left;
    width:25%;
    height:300px;
    background-color:blueviolet;
}
#form-box {
    background-color:bisque; 
    width:55%;
    float:right;
}
#form {
}

